--- a/Instructions/Labs/MS030T00MOD2.md
+++ b/Instructions/Labs/MS030T00MOD2.md
@@ -321,23 +321,14 @@ Lab B: Managing Office 365 groups and administration
 
 8. On the **Completed the Microsoft Online Services Sign-in Assistant Setup Wizard** page, click **Finish**.
 
-9. In Microsoft Edge, browse to **http://aka.ms/siqtee**, and then click **Save**.
+9. Open PowerShell as an Administrator.
 
-10. After **AdministrationConfig-en.msi** finishes downloading, click **Run**.
+10. Type Install-Module MSOnline.
 
-11. In the Microsoft Azure Active Directory Module for Windows PowerShell Setup wizard, click **Next**.
+11. On NuGet provider type Y and enter.
 
-12. On the **License Terms** page, click **I accept the terms in the License Terms**, and click **Next**.
-
-13. On the **Install Location** page, click **Next**.
-
-14. On the **Ready to Install** page, click **Install**.
-
-15. In the **User Account Control** dialog box, click **Yes**.
-
-16. On the **Completing the Microsoft Azure Active Directory Module for Windows PowerShell Setup** page, click **Finish**.
-
-17. Close Microsoft Edge.
+12. On Untrusted Repository type Y and enter
+.
 
 ## Task 2: Create new users and assign licenses by using Windows PowerShell
 
@@ -560,7 +551,7 @@ Lab B: Managing Office 365 groups and administration
 
 2. Sign in as **Admin@M365xyyxxxxx.onmicrosoft.com**, where yyxxxxx is your unique M365x number, with the password **Pa55w.rd**.
 
-. In the Office 365 admin center, click **Admin**.
+3. In the Office 365 admin center, click **Admin**.
 
 4. On the left-hand side, point to **Users**, click **Active users**, and then click **Francisco Chaves**.
 
@@ -590,7 +581,7 @@ Lab B: Managing Office 365 groups and administration
  		Add-MsolRoleMember –RoleName “Company Administrator” –RoleMemberEmailAddress“Amy@yourdomain.hostdomain.com”
 
 
-. At the command prompt, type the following command, and then press Enter:
+3. At the command prompt, type the following command, and then press Enter:
 		$role = Get-MsolRole –RoleName “Service Support Administrator”
 
 
